them phan phong chong

--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -49,17 +49,10 @@
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-<<<<<<< HEAD:activar/phòng chống.html
                             <li class="active"><a href="./home.html">Home</a></li>
                             <li><a href="./thông tin.html">Thông tin</a></li>
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
-=======
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">Thông tin</a></li>
-                            <li><a href="./schedule.html">Triệu chứng</a></li>
-                            <li class="active"><a href="./gallery.html">Phòng chống</a></li>
->>>>>>> c3a24da3747436764b7fb8868b9e76d23791023f:activar/gallery.html
                             <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
@@ -104,24 +97,12 @@
                 </div>
             </div>
             <div class="row gallery-filter">
-                <div class="col-lg-4 col-sm-6 mix crossfit workout">
+                <div class="col-lg-4 col-sm-6 mix crossfit ">
                     <div class="gallery-item">
-                        <img src="img/prevent/Phòng1.jpg" alt="">
+                        <img src="img/prevent1/Phòng3.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent/Phòng1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
-                                <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 mix workout gym">
-                    <div class="gallery-item">
-                        <img src="img/prevent/Phòng2.jpg" alt="">
-                        <div class="gi-hover-warp">
-                            <div class="gi-hover">
-                                <a href="img/prevent/Phòng2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -130,10 +111,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
-                        <img src="img/prevent/Phòng3.jpg" alt="">
+                        <img src="img/prevent1/Phòng6.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent/Phòng3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng6.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -142,36 +123,58 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mix gym">
                     <div class="gallery-item">
-                        <img src="img/prevent/Phòng4.jpg" alt="">
+                        <img src="img/prevent1/Phòng1.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent/Phòng4.jpg" class="image-popup"><i
-                                        class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix crossfit">
+                <div class="col-lg-4 col-sm-6 mix crossfit ">
                     <div class="gallery-item">
-                        <img src="img/prevent/Phòng5.jpg" alt="">
+                        <img src="img/prevent1/Phòng9.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/prevent/Phòng5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng9.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix gym crossfit">
+                <div class="col-lg-4 col-sm-6 mix crossfit ">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-6.jpg" alt="">
+                        <img src="img/prevent1/Phòng10.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-6.jpg" class="image-popup"><i
-                                        class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng10.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix gym">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng2.jpg" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix gym">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng4.jpg" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng4.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
@@ -180,43 +183,101 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-7.jpg" alt="">
+                        <img src="img/prevent1/Phòng8.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-7.jpg" class="image-popup"><i
-                                        class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng8.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix crossfit gym">
+                <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-8.jpg" alt="">
+                        <img src="img/prevent1/Phòng13.png" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-8.jpg" class="image-popup"><i
-                                        class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng13.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix crossfit gym workout">
+                <div class="col-lg-4 col-sm-6 mix gym">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-9.jpg" alt="">
+                        <img src="img/prevent1/Phòng5.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-9.jpg" class="image-popup"><i
-                                        class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent2/Phòng5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
                                 <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-sm-6 mix crossfit ">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng11.png" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng11.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix workout">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng14.jpeg" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng14.jpeg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix crossfit ">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng12.png" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng12.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix gym">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng7.png" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng7.png" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mix workout">
+                    <div class="gallery-item">
+                        <img src="img/prevent1/Phòng15.jpg" alt="">
+                        <div class="gi-hover-warp">
+                            <div class="gi-hover">
+                                <a href="img/prevent2/Phòng15.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="#"><i class="fa fa-chain"></i></a>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
