--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/symptom.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -49,17 +51,10 @@
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-<<<<<<< HEAD:activar/triệu chứng.html
                             <li class="active"><a href="./home.html">Home</a></li>
                             <li><a href="./thông tin.html">Thông tin</a></li>
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
-=======
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">Thông tin</a></li>
-                            <li class="active"><a href="./schedule.html">Triệu chứng</a></li>
-                            <li><a href="./gallery.html">Phòng chống</a></li>
->>>>>>> c3a24da3747436764b7fb8868b9e76d23791023f:activar/schedule.html
                             <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
@@ -82,10 +77,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>SCHEDULE & CLASSES</h2>
+                        <h2>TRIỆU CHỨNG</h2>
                         <div class="breadcrumb-controls">
                             <a href="#"><i class="fa fa-home"></i> Home</a>
-                            <span>Schedule</span>
+                            <span>Triệu chứng</span>
                         </div>
                     </div>
                 </div>
@@ -94,166 +89,41 @@
     </section>
     <!-- Breadcrumb End -->
 
-    <!-- Class Time Section Begin -->
-    <section class="classtime-section class-time-table spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="section-title">
-                        <h2>Classtime Table</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="timetable-controls">
-                        <ul>
-                            <li class="active" data-tsfilter="all">all class</li>
-                            <li data-tsfilter="crossfit">crossfit</li>
-                            <li data-tsfilter="lunge">lunge ball</li>
-                            <li data-tsfilter="ppsr">ppsr</li>
-                            <li data-tsfilter="walls">walls</li>
-                            <li data-tsfilter="candy">candy</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="classtime-table">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Monday</th>
-                                <th>Tuesday</th>
-                                <th>Wednesday</th>
-                                <th>Thursday</th>
-                                <th>Friday</th>
-                                <th>Saturday</th>
-                                <th>Sunday</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="workout-time">10.00</td>
-                                <td class="hover-bg ts-item" data-tsmeta="crossfit">
-                                    <span>10.00 - 14.00</span>
-                                    <h6>Crossfit lv1</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="crossfit">
-                                    <span>10.00 - 15.00</span>
-                                    <h6>Crossfit lv1</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="lunge">
-                                    <span>10.00 - 13.00</span>
-                                    <h6>Lunge Ball Bur</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="lunge">
-                                    <span>10.00 - 13.30</span>
-                                    <h6>Lunge Ball Bur</h6>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="workout-time">14.00</td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="lunge">
-                                    <span>14.00 - 17.00</span>
-                                    <h6>Lunge Ball Bur</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="crossfit">
-                                    <span>14.00 - 17.00</span>
-                                    <h6>Crossfit lv1</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="walls">
-                                    <span>14.00 - 15.30</span>
-                                    <h6>Walls to Knees</h6>
-                                </td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td class="workout-time">16.00</td>
-                                <td class="hover-bg ts-item" data-tsmeta="lunge">
-                                    <span>16.00 - 18.00</span>
-                                    <h6>Lunge Ball Bur</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="candy">
-                                    <span>16.00 - 19.00</span>
-                                    <h6>Candy</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="candy">
-                                    <span>16.00 - 19.00</span>
-                                    <h6>Candy</h6>
-                                </td>
-                                <td class="hover-bg ts-item" data-tsmeta="ppsr">
-                                    <span>16.00 - 17.00</span>
-                                    <h6>Ppsr</h6>
-                                </td>
-                                <td class="hover-bg ts-item" data-tsmeta="murph">
-                                    <span>16.00 - 20.00</span>
-                                    <h6>murph</h6>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="workout-time">18.00</td>
-                                <td class="hover-bg ts-item" data-tsmeta="walls">
-                                    <span>18.00 - 20.00</span>
-                                    <h6>Walls to Knees</h6>
-                                </td>
-                                <td class="hover-bg ts-item" data-tsmeta="ppsr">
-                                    <span>18.00 - 20.00</span>
-                                    <h6>ppsr</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="chelsea">
-                                    <span>18.00 - 22.00</span>
-                                    <h6>Chelsea</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="annie">
-                                    <span>18.00 - 22.00</span>
-                                    <h6>annie</h6>
-                                </td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td class="workout-time">20.00</td>
-                                <td class="hover-bg ts-item" data-tsmeta="lunge">
-                                    <span>21.00 - 23.00</span>
-                                    <h6>Lunge Ball Bur</h6>
-                                </td>
-                                <td class="hover-bg ts-item" data-tsmeta="walls">
-                                    <span>20.00 - 22.00</span>
-                                    <h6>Walls to Knees</h6>
-                                </td>
-                                <td class="hover-bg ts-item" data-tsmeta="walls">
-                                    <span>20.30 - 23.00</span>
-                                    <h6>Walls to Knees</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="crossfit">
-                                    <span>22.00 - 23.00</span>
-                                    <h6>Crossfit Lv2</h6>
-                                </td>
-                                <td></td>
-                                <td class="hover-bg ts-item" data-tsmeta="crossfit">
-                                    <span>21.00 - 23.00</span>
-                                    <h6>Crossfit Lv2</h6>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+    <!-- symtom things -->
+    <br>
+<div class="bg">
+    <div > 
+        <div id="line"> </div>
+        <div> 
+            <h1 id="head">
+                TRIỆU CHỨNG
+            </h1>
         </div>
-    </section>
-    <!-- Class Time Section End -->
+    <!-- Cái id="line","head" và class="bg" có thể tái sử dụng được -->
+
+        
+    </div>
+
+
+    <div id="Symtom_cotainer">
+
+        
+        <div id="contain" class="box-clumn display">
+            <div class="box-mini font">Đau đầu,khó chịu</div>
+            <div class="box-mini font">Ho,đau họng</div>
+            <div class="box-mini font">Sốt cao (>38°C)</div>
+            <div class="box-mini font">Sổ mũi,khó thở</div>
+            <div class="box-mini font">Đau mỏi cơ</div>
+            <div class="box-mini font">Suy hô hấp</div>
+        </div>
+        <div class="display box-infectious">
+            <img src="Truyền nhiễm.png" alt="" id="symptom_image">
+        </div>
+    </div>
+
+    </div>
+</div>
+    <!-- symtom things End -->
 
     <!-- Classes Section Begin -->
     <section class="classes-section schedule-page">
