--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -72,12 +72,14 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg spad" data-setbg="img/phòng0.png">
+    <section class="breadcrumb-section set-bg spad" >
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <br><br><br><br><br><br><br>
+                <div class="col-lg-1"></div>
+                <div class="col-lg-10">
+                    <img src="img/phòng0.png" alt="">
                 </div>
+                <div class="col-lg-1"></div>
             </div>
         </div>
     </section>
