--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -72,7 +72,7 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg spad" data-setbg="img/about-bread.jpg">
+    <section class="breadcrumb-section set-bg spad" data-setbg="img/bgtrieuchung.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
